chore(helm): fix secret templates to actually work if create=true, make _>- transition consistent

--- a/charts/postfix/templates/secret_pgsql_mailman_recipients.yaml
+++ b/charts/postfix/templates/secret_pgsql_mailman_recipients.yaml
@@ -6,6 +6,8 @@ metadata:
   labels:
     {{- include "postfix.labels" . | nindent 4 }}
 type: Opaque
-data:
-  pgsql-mailman-recipients.cf: {{ .Values.pgsql_mailman_recipients.data.pgsql_mailman_recipients | b64enc }}
+stringData:
+  {{- with .Values.pgsql_mailman_recipients.data }}
+  {{- toYaml . | nindent 4 }}
+  {{- end }}
 {{- end }}
