--- a/charts/postfix/templates/secret_pgsql_restricted_senders.yaml
+++ b/charts/postfix/templates/secret_pgsql_restricted_senders.yaml
@@ -6,6 +6,8 @@ metadata:
   labels:
     {{- include "postfix.labels" . | nindent 4 }}
 type: Opaque
-data:
-  pgsql-restricted-senders.cf: {{ .Values.pgsql_restricted_senders.data.pgsql_restricted_senders | b64enc }}
+stringData:
+  {{- with .Values.pgsql_restricted_senders.data }}
+  {{- toYaml . | nindent 4 }}
+  {{- end }}
 {{- end }}
