--- a/charts/postfix/templates/secret_pgsql_restriction_classes.yaml
+++ b/charts/postfix/templates/secret_pgsql_restriction_classes.yaml
@@ -6,7 +6,7 @@ metadata:
   labels:
     {{- include "postfix.labels" . | nindent 4 }}
 type: Opaque
-data:
+stringData:
   {{- with .Values.pgsql_restriction_classes.data }}
   {{- toYaml . | nindent 4 }}
   {{- end }}
