--- a/charts/postfix/templates/secret_pgsql_transport.yaml
+++ b/charts/postfix/templates/secret_pgsql_transport.yaml
@@ -6,6 +6,8 @@ metadata:
   labels:
     {{- include "postfix.labels" . | nindent 4 }}
 type: Opaque
-data:
-  pgsql-transport.cf: {{ .Values.pgsql_transport.data.pgsql_transport | b64enc }}
+stringData:
+  {{- with .Values.pgsql_transport.data }}
+  {{- toYaml . | nindent 4 }}
+  {{- end }}
 {{- end }}
