--- a/charts/postfix/templates/secret_pgsql_transport_mm.yaml
+++ b/charts/postfix/templates/secret_pgsql_transport_mm.yaml
@@ -6,6 +6,8 @@ metadata:
   labels:
     {{- include "postfix.labels" . | nindent 4 }}
 type: Opaque
-data:
-  pgsql-transport-mm.cf: {{ .Values.pgsql_transport_mm.data.pgsql_transport_mm | b64enc }}
+stringData:
+  {{- with .Values.pgsql_transport_mm.data }}
+  {{- toYaml . | nindent 4 }}
+  {{- end }}
 {{- end }}
