--- a/charts/postfix/templates/secret_pgsql_virtual_recipients.yaml
+++ b/charts/postfix/templates/secret_pgsql_virtual_recipients.yaml
@@ -6,6 +6,8 @@ metadata:
   labels:
     {{- include "postfix.labels" . | nindent 4 }}
 type: Opaque
-data:
-  pgsql-virtual-recipients.cf: {{ .Values.pgsql_virtual_recipients.data.pgsql_virtual_recipients | b64enc }}
+stringData:
+  {{- with .Values.pgsql_virtual_recipients.data }}
+  {{- toYaml . | nindent 4 }}
+  {{- end }}
 {{- end }}
