--- a/charts/postfix/templates/secret_pgsql_relay_domains.yaml
+++ b/charts/postfix/templates/secret_pgsql_relay_domains.yaml
@@ -6,6 +6,8 @@ metadata:
   labels:
     {{- include "postfix.labels" . | nindent 4 }}
 type: Opaque
-data:
-  pgsql-relay-domains.cf: {{ .Values.pgsql_relay_domains.data.pgsql_relay_domains | b64enc }}
+stringData:
+  {{- with .Values.pgsql_relay_domains.data }}
+  {{- toYaml . | nindent 4 }}
+  {{- end }}
 {{- end }}
