--- a/charts/postfix/values.yaml
+++ b/charts/postfix/values.yaml
@@ -114,6 +114,12 @@ mx_tls:
 postfix:
   hostname: mx.mydomain.com
   postscreenEnabled: true
+  smtpLimits:
+    clientMessageRate: 0
+    clientRecipientRate: 0
+    messageSize: 0
+    recipientLimit: 0
+    recipientOvershoot: 0
   mynetworks:
     - 127.0.0.0/8
     - 10.0.0.0/8
